# rice_agents

./: .gitignore  Makefile  README.md  USAGE.md  main.py  pyproject.toml  rice_agents.example.toml
.github/agents/: Research.agent.md
docs/: rice_agents_ricedb_integration.md  ricedb_example.md
docs/rice_agents/: complex_patterns.md  concepts.md  containers.md  getting_started.md  index.md  ricedb_integration.md
examples/: 01_basic_tool.py  02_memory_rag.py  03_flows.py  04_adaptive_swarm.py  05_hierarchical_dev_team.py  06_interactive_filesystem.py  07_ricedb_memory.py
examples/01_basic_tool/: .gitignore  main.py  pyproject.toml  rice_agents.toml
examples/02_memory_rag/: main.py  pyproject.toml  rice_agents.toml
examples/03_flows/: main.py  pyproject.toml  rice_agents.toml
examples/04_adaptive_swarm/: main.py  pyproject.toml  rice_agents.toml
examples/05_hierarchical_dev_team/: main.py  pyproject.toml  rice_agents.toml
examples/06_interactive_filesystem/: main.py  pyproject.toml  rice_agents.toml
examples/07_ricedb_memory/: main.py  pyproject.toml  rice_agents.toml
examples/08_massive_research_swarm/: main.py  pyproject.toml  rice_agents.toml
examples/09_city_logistics_swarm/: main.py  pyproject.toml  rice_agents.toml
examples/10_code_review_swarm/: .env.example  Makefile  agents.py  db_handler.py  main.py  pyproject.toml  rice_agents.toml
examples/11_adaptive_code_review/: .env.example  .gitignore  FINAL_ADAPTIVE_REPORT.md  agents.py  db_handler.py  main.py  pyproject.toml  schema.py
examples/12_music_processing/: .gitignore  main.py  pyproject.toml  rice_agents.toml
examples/12_retrieval_benchmark/: .env.example  .gitignore  README.md  main.py  pyproject.toml
examples/13_adaptive_sdr/: db.py  main.py  pyproject.toml
examples/13_remove_drums/: main.py  pyproject.toml
examples/14_complex_config/: pyproject.toml
examples/14_retrieval_benchmark/: pyproject.toml
examples/15_adaptive_sdr/: agents.py  db.py  leads.json  product_kb.txt  pyproject.toml  rice_agents.toml
examples/15_advanced_ricedb_patterns/: Makefile  README.md  cortex_session_isolation.py  multi_agent_branching.py  nested_agent_collaboration.py  pyproject.toml  rice_agents.toml
examples/16_complex_config/: main.py  rice_agents.toml
examples/17_remote_ricedb/: main.py  pyproject.toml  rice_agents.toml
src/rice_agents/: config.py
src/rice_agents/agents/: base.py
src/rice_agents/containers/: __init__.py  base.py
src/rice_agents/llms/: base.py  gemini_provider.py  openai_provider.py
src/rice_agents/memory/: __init__.py  base.py  ricedb_store.py  vector_store.py
src/rice_agents/orchestration/: adaptive.py  flows.py
src/rice_agents/tools/: base.py
tests/: conftest.py  test_agents.py  test_containers.py  test_flows.py  test_memory.py  test_nested_flows.py  test_ricedb_integration.py  test_tools.py
