[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "rice-agents"
version = "0.1.1"
description = "A modular, provider-agnostic framework for building and orchestrating AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Shankha", email = "your.email@example.com" }]
dependencies = [
    "anthropic>=0.75.0",
    "chromadb>=0.5.0",
    "google-genai==1.56.0",
    "nest-asyncio>=1.6.0",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "ricedb[grpc,embeddings] @ git+https://github.com/shankha98/ricedb-python.git@a129a46469d27def86b935a409a6753fdbf5f290",
]

[project.urls]
Homepage = "https://github.com/yourusername/rice-agents"

[dependency-groups]
dev = ["ruff>=0.14.9", "ty>=0.0.3", "pytest>=7.4.0", "pytest-asyncio>=0.23.0"]

# --- Ty Configuration ---
[tool.ty]
# python-version = "3.11"
# python-platform = "darwin"

[tool.ty.src]
include = ["src", "tests", "examples"]

[tool.ty.rules]
possibly-missing-import = "warn"

# --- Ruff Configuration ---
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = ["E501"] # Ignore line length violations (let formatter handle it)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.uv.workspace]
members = [
    "examples/01_basic_tool",
    ".",
    "examples/02_memory_rag",
    ".",
    "examples/03_flows",
    ".",
    "examples/04_adaptive_swarm",
    ".",
    "examples/05_hierarchical_dev_team",
    ".",
    "examples/06_interactive_filesystem",
    ".",
    "examples/07_ricedb_memory",
    ".",
    "examples/08_massive_research_swarm",
    ".",
    "examples/09_city_logistics_swarm",
    ".",
    "examples/10_code_review_swarm",
    ".",
    "examples/11_adaptive_code_review",
    ".",
    "examples/12_retrieval_benchmark",
    ".",
    ".",
    "examples/13_adaptive_sdr",
    ".",
    ".",
    "examples/16_complex_config",
    ".",
    "examples/17_remote_ricedb",
    ".",
]
