[project]
name = "02-memory-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.7",
    "google-genai>=1.56.0",
    "python-dotenv>=1.2.1",
    "rice-agents",
]

[tool.uv.sources]
rice-agents = { workspace = true, editable = true }
