[project]
name = "15-advanced-ricedb-patterns"
version = "0.1.0"
description = "Advanced RiceDB patterns for AI Agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.56.0",
    "python-dotenv>=1.2.1",
    "rice-agents",
    "ricedb>=0.1.0",
]

[tool.uv.sources]
rice-agents = { path = "../..", editable = true }
